Added Text and link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  Hello world
+  <h2>Skiing</h2>
+  <p>I like downhill skiing because its a good sport for fitness and it challenges your reaction time and physical abilities at the same time.</p>
+  <a href="https://en.wikipedia.org/wiki/Skiing">Information about skiing on Wikipedia</a>
   <script src="script.js"></script>
 </body>
 
